--- a/src/bioedifica/src/main/resources/application-prod.properties
+++ b/src/bioedifica/src/main/resources/application-prod.properties
@@ -2,6 +2,9 @@
 # CONFIGURAÇÃO PARA PRODUÇÃO (RENDER)
 # ========================================
 
+# Porta do servidor (Render fornece via variável PORT)
+server.port=${PORT:8080}
+
 # CORS para produção
 cors.allowed-origins=https://bioedifica.vercel.app,https://bioedifica.netlify.app,https://www.bioedifica.com,http://localhost:5173,http://localhost:3000
 
