--- a/src/bioedifica/src/main/resources/application-prod.properties
+++ b/src/bioedifica/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@
 server.port=${PORT:8080}
 
 # CORS para produção
-cors.allowed-origins=https://bioedifica.vercel.app,https://bioedifica.netlify.app,https://www.bioedifica.com,http://localhost:5173,http://localhost:3000
+cors.allowed-origins=https://bio-edifica-front.vercel.app,https://bioedifica.vercel.app,https://bioedifica.netlify.app,https://www.bioedifica.com,http://localhost:5173,http://localhost:3000
 
 # ========================================
 # POSTGRESQL (RENDER)
