alteração no banco de dados

--- a/src/bioedifica/src/main/resources/application-prod.properties
+++ b/src/bioedifica/src/main/resources/application-prod.properties
@@ -9,12 +9,12 @@ server.port=${PORT:8080}
 cors.allowed-origins=https://bio-edifica-front.vercel.app,https://bioedifica.vercel.app,https://bioedifica.netlify.app,https://www.bioedifica.com,http://localhost:5173,http://localhost:3000
 
 # ========================================
-# POSTGRESQL (RENDER)
+# POSTGRESQL (RENDER) - NOVO BANCO
 # ========================================
-spring.datasource.url=jdbc:postgresql://dpg-d4af7fkhg0os738127rg-a.oregon-postgres.render.com:5432/bioedifica1
+spring.datasource.url=jdbc:postgresql://dpg-d50uqvf5r7bs73atheg0-a.oregon-postgres.render.com:5432/bioedifica1_d2fb
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=bioedifica1_user
-spring.datasource.password=UzxZsr45P8G1S1EOvjA0KBzYf9TrBMjl
+spring.datasource.username=bioedifica1_d2fb_user
+spring.datasource.password=2XtR461Z0ZF3GopyNESJ0i8uKPBUOIEJ
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # ========================================
